# overlap_analysis

./: .gitignore  CMakeLists.txt  README.md
data/: 4_pals.fastq  adjacency_a.csv  adjacency_b.csv  adjacency_test.paf  shasta_TinyTest.fastq  test.paf  test_chain_long.paf  test_rle_reference.fai  test_rle_reference.fasta  test_rle_reference_RLE.fasta  test_rle_sequences.fai  test_rle_sequences.fasta  test_rle_sequences_RLE.fasta  working_test.gnuplot
inc/: AlignmentChain.hpp  AlignmentInterval.hpp  Color.hpp  DagAligner.hpp  DiagonalIntervalTree.hpp  DiagonalTree.hpp  FastaReader.hpp  FastaWriter.hpp  FastqIterator.hpp  Graph.hpp  Kernel.hpp  OverlapMap.hpp  PafAlignmentChain.hpp  PafElement.hpp  Plot.hpp  RunlengthSequenceElement.hpp  SequenceElement.hpp  SvgPlot.hpp  SweepLineSolver.hpp  dotplot.hpp  graph_utils.hpp  span.hpp  wavefront.hpp
methods/: diagonals.ods
scripts/: compare_lengths.py  compare_phasing.py  convert_shasta_overlap_ids_to_readname.py  dotplot.py  evaluate_chimeras.py  evaluate_palindromes.py  extract_flagged_palindromes_from_shasta_read_summary.py  extract_reads.py  extract_reads_by_shasta_id_from_fastq.py  extract_reads_from_fastq.py  fastq_stats.py  filter_paf_supplementaries.py  generate_test_rle_sequences.py  plot_alignment_info.py  plot_mapping_distribution.py  plot_quality.py  predict_overlap_from_alignment_info.py  predict_overlap_from_full_alignment.py  sequence_embedding.py  set_compare_reads.py  subsample_fastq.py  subsample_fastq_by_template.py  torch_error_reproduction_script.py
scripts/modules/: Fastq.py  Kmer.py  KmerIterator.py
src/: AlignmentChain.cpp  AlignmentInterval.cpp  Color.cpp  DagAligner.cpp  DiagonalIntervalTree.cpp  DiagonalTree.cpp  FastaReader.cpp  FastqIterator.cpp  Graph.cpp  Kernel.cpp  OverlapMap.cpp  PafAlignmentChain.cpp  PafElement.cpp  Plot.cpp  RunlengthSequenceElement.cpp  SvgPlot.cpp  SweepLineSolver.cpp  dotplot.cpp  graph_utils.cpp  wavefront.cpp
src/executable/: chain_alignment.cpp  dotplot.cpp  evaluate_overlaps.cpp  fasta_to_RLE_fasta.cpp  filter_chimeras_from_paf.cpp  filter_palindromes_by_quality.cpp  find_overlapping_alignments.cpp  label_alignment_files.cpp  label_alignment_info.cpp  plot_alignment_as_double_stranded_graph.cpp  plot_alignment_as_graph.cpp  plot_shasta_alignments.cpp  self_align.cpp  self_dotplot.cpp  split_palindromes_by_quality.cpp
src/test/: test_boost_interval_map.cpp  test_boost_rtree.cpp  test_chaining.cpp  test_dag.cpp  test_diagonal_interval_tree.cpp  test_diagonal_tree.cpp  test_edlib.cpp  test_edlib_runtime.cpp  test_gnuplot.cpp  test_kernel.cpp  test_mummer_runtime.cpp  test_networkit.cpp  test_ogdf.cpp  test_svgplot.cpp  test_sweepline.cpp  test_wf.cpp
